--- a/Classification_2.ipynb
+++ b/Classification_2.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "((1500, 3), (1500,))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "RandomForestClassifier(criterion='entropy', n_estimators=1000, random_state=0)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "0.984"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "0.984"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "((27676, 108), (27676,))"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "RandomForestClassifier(criterion='entropy', random_state=0)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "0.8507676560900717"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "0.8507676560900717"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -301,6 +301,427 @@
    ],
    "source": [
     "print(classification_report(y_test, prev))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OneR = a simple, yet accurate, classification algorithm that generates one rule for each predictor in the data, then selects the rule with the smallest total error as its \"one rule\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import Orange"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataFrame_RC = Orange.data.Table('DB/risco_credito_regras.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[ruim, alta, nenhuma, 0_15 | alto],\n",
+       " [desconhecida, alta, nenhuma, 15_35 | alto],\n",
+       " [desconhecida, baixa, nenhuma, 15_35 | moderado],\n",
+       " [desconhecida, baixa, nenhuma, acima_35 | alto],\n",
+       " [desconhecida, baixa, nenhuma, acima_35 | baixo],\n",
+       " ...\n",
+       "]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataFrame_RC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[historia, divida, garantias, renda | risco]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataFrame_RC.domain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cn2 = Orange.classification.rules.CN2Learner()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Treinamento do algorítimo / criação das regras\n",
+    "rules_RC = cn2(dataFrame_RC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IF renda==0_15 THEN risco=alto \n",
+      "IF historia==boa AND divida!=alta THEN risco=baixo \n",
+      "IF historia==boa AND garantias!=nenhuma THEN risco=baixo \n",
+      "IF historia==boa AND renda!=15_35 THEN risco=baixo \n",
+      "IF historia==boa THEN risco=moderado \n",
+      "IF divida==alta THEN risco=alto \n",
+      "IF historia!=desconhecida THEN risco=moderado \n",
+      "IF garantias==adequada THEN risco=baixo \n",
+      "IF renda==15_35 THEN risco=moderado \n",
+      "IF historia==desconhecida THEN risco=alto \n",
+      "IF TRUE THEN risco=alto \n"
+     ]
+    }
+   ],
+   "source": [
+    "for rules in rules_RC.rule_list:\n",
+    "    print(rules)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = rules_RC([['boa', 'alta', 'nenhuma','acima_35'],['ruim', 'alta', 'adequada','0_15']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('alto', 'baixo', 'moderado')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataFrame_RC.domain.class_var.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "baixo\n",
+      "alto\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in pred:\n",
+    "    print(dataFrame_RC.domain.class_var.values[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataFrame_CD = Orange.data.Table('DB/credit_data_regras.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[66155.9, 59.017, 8106.53 | 0],\n",
+       " [34415.2, 48.1172, 6564.75 | 0],\n",
+       " [57317.2, 63.108, 8020.95 | 0],\n",
+       " [42709.5, 45.752, 6103.64 | 0],\n",
+       " [66952.7, 18.5843, 8770.1 | 1],\n",
+       " ...\n",
+       "]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataFrame_CD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[income, age, loan | default]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataFrame_CD.domain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Criando variável que separa em uma base de teste e uma de trinamento\n",
+    "df_split = Orange.evaluation.testing.sample(dataFrame_CD, n = 0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([[47846.9, 24.4184, 3713.26 | 0],\n",
+       "  [55273.3, 25.4164, 10283 | 1],\n",
+       "  [57646.2, 62.8707, 1452.49 | 0],\n",
+       "  [24037.2, 23.3116, 2469.36 | 0],\n",
+       "  [33707.8, 59.9176, 321.579 | 0],\n",
+       "  ...\n",
+       " ],\n",
+       " [[61660.4, 48.8988, 1684.53 | 0],\n",
+       "  [24877.7, 29.8236, 1546.42 | 0],\n",
+       "  [23886.6, 34.443, 4440.42 | 1],\n",
+       "  [55948.1, 40.303, 8569.22 | 0],\n",
+       "  [43308.2, 34.8314, 6777.2 | 1],\n",
+       "  ...\n",
+       " ])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_split[0], df_split[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = df_split[1]\n",
+    "df_test = df_split[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(500, 1500)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_test), len(df_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cn2 = Orange.classification.rules.CN2Learner()\n",
+    "rules_CD = cn2(df_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IF age>=34.9966813726351 THEN default=0 \n",
+      "IF loan<=2495.13299137587 AND income>=20145.9885970689 THEN default=0 \n",
+      "IF loan>=7660.34617051509 AND loan>=9601.375482171099 THEN default=1 \n",
+      "IF income<=31702.3342987522 AND age>=28.476944413036104 THEN default=1 \n",
+      "IF income>=58132.4712652713 AND income>=69695.1504494064 THEN default=1 \n",
+      "IF income>=58132.4712652713 AND income>=67800.5813318305 THEN default=0 \n",
+      "IF loan>=7329.243163822591 AND loan>=9595.28628892989 THEN default=0 \n",
+      "IF loan>=7498.630446855849 THEN default=1 \n",
+      "IF income>=50360.6787929311 AND income>=57628.438917454296 THEN default=0 \n",
+      "IF loan>=5785.88427485782 AND age>=27.0216773641296 THEN default=1 \n",
+      "IF loan>=5836.56338145928 AND income>=56050.3025818616 THEN default=1 \n",
+      "IF income>=46911.197102163 AND income>=50360.6787929311 THEN default=0 \n",
+      "IF loan>=5836.56338145928 THEN default=1 \n",
+      "IF income<=31702.3342987522 AND age>=28.4226720966399 THEN default=0 \n",
+      "IF income<=31722.7309499867 AND age>=34.851817262359 THEN default=0 \n",
+      "IF age>=28.5471422006376 AND income>=44405.28066363191 THEN default=0 \n",
+      "IF income>=32197.6207010448 AND income>=45971.133494749694 THEN default=0 \n",
+      "IF loan>=4098.11578954984 AND loan>=5233.66322803221 THEN default=1 \n",
+      "IF age>=28.5471422006376 AND income>=33093.9618567936 THEN default=0 \n",
+      "IF age>=27.291530027519897 THEN default=1 \n",
+      "IF age>=26.928214998450102 THEN default=0 \n",
+      "IF age>=26.1922096619383 THEN default=1 \n",
+      "IF income<=29775.1422203146 AND age>=26.159438316244604 THEN default=0 \n",
+      "IF income<=29775.1422203146 AND age>=21.6304703606293 THEN default=1 \n",
+      "IF income>=40496.2558229454 THEN default=0 \n",
+      "IF loan>=4509.88142162832 THEN default=1 \n",
+      "IF income>=29775.1422203146 THEN default=0 \n",
+      "IF loan>=3716.2546852118 THEN default=1 \n",
+      "IF income>=24857.6948815025 THEN default=0 \n",
+      "IF income<=21217.7474563941 THEN default=1 \n",
+      "IF TRUE THEN default=0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for rules in rules_CD.rule_list:\n",
+    "    print(rules)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = Orange.evaluation.testing.TestOnTestData(df_train, df_test, [lambda testdata: rules_CD])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Orange.evaluation.testing.Results at 0x23b4c9108e0>"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.974])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Orange.evaluation.CA(pred)"
    ]
   }
  ],
