--- a/Classification_2.ipynb
+++ b/Classification_2.ipynb
@@ -411,7 +411,7 @@
       "IF historia!=desconhecida THEN risco=moderado \n",
       "IF garantias==adequada THEN risco=baixo \n",
       "IF renda==15_35 THEN risco=moderado \n",
-      "IF historia==desconhecida THEN risco=alto \n",
+      "IF historia==desconhecida THEN risco=baixo \n",
       "IF TRUE THEN risco=alto \n"
      ]
     }
@@ -562,18 +562,18 @@
     {
      "data": {
       "text/plain": [
-       "([[47846.9, 24.4184, 3713.26 | 0],\n",
-       "  [55273.3, 25.4164, 10283 | 1],\n",
-       "  [57646.2, 62.8707, 1452.49 | 0],\n",
-       "  [24037.2, 23.3116, 2469.36 | 0],\n",
-       "  [33707.8, 59.9176, 321.579 | 0],\n",
+       "([[28163.3, 58.0035, 2121.15 | 0],\n",
+       "  [41816.7, 48.9172, 4534.58 | 0],\n",
+       "  [61869.5, 36.2273, 1040.49 | 0],\n",
+       "  [59132.7, 48.345, 4575.53 | 0],\n",
+       "  [33572.4, 57.4422, 3369.38 | 0],\n",
        "  ...\n",
        " ],\n",
-       " [[61660.4, 48.8988, 1684.53 | 0],\n",
-       "  [24877.7, 29.8236, 1546.42 | 0],\n",
-       "  [23886.6, 34.443, 4440.42 | 1],\n",
-       "  [55948.1, 40.303, 8569.22 | 0],\n",
-       "  [43308.2, 34.8314, 6777.2 | 1],\n",
+       " [[39988.7, 54.2687, 357.088 | 0],\n",
+       "  [34981.4, 23.4877, 5502.74 | 1],\n",
+       "  [59589.1, 20.6098, 4191.72 | 0],\n",
+       "  [22279.3, 58.9073, 3141.34 | 0],\n",
+       "  [35195.5, 49.6584, 2836.99 | 0],\n",
        "  ...\n",
        " ])"
       ]
@@ -636,36 +636,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IF age>=34.9966813726351 THEN default=0 \n",
+      "IF age>=34.9257164876908 THEN default=0 \n",
       "IF loan<=2495.13299137587 AND income>=20145.9885970689 THEN default=0 \n",
-      "IF loan>=7660.34617051509 AND loan>=9601.375482171099 THEN default=1 \n",
-      "IF income<=31702.3342987522 AND age>=28.476944413036104 THEN default=1 \n",
-      "IF income>=58132.4712652713 AND income>=69695.1504494064 THEN default=1 \n",
-      "IF income>=58132.4712652713 AND income>=67800.5813318305 THEN default=0 \n",
-      "IF loan>=7329.243163822591 AND loan>=9595.28628892989 THEN default=0 \n",
-      "IF loan>=7498.630446855849 THEN default=1 \n",
-      "IF income>=50360.6787929311 AND income>=57628.438917454296 THEN default=0 \n",
-      "IF loan>=5785.88427485782 AND age>=27.0216773641296 THEN default=1 \n",
-      "IF loan>=5836.56338145928 AND income>=56050.3025818616 THEN default=1 \n",
-      "IF income>=46911.197102163 AND income>=50360.6787929311 THEN default=0 \n",
-      "IF loan>=5836.56338145928 THEN default=1 \n",
-      "IF income<=31702.3342987522 AND age>=28.4226720966399 THEN default=0 \n",
-      "IF income<=31722.7309499867 AND age>=34.851817262359 THEN default=0 \n",
-      "IF age>=28.5471422006376 AND income>=44405.28066363191 THEN default=0 \n",
-      "IF income>=32197.6207010448 AND income>=45971.133494749694 THEN default=0 \n",
-      "IF loan>=4098.11578954984 AND loan>=5233.66322803221 THEN default=1 \n",
-      "IF age>=28.5471422006376 AND income>=33093.9618567936 THEN default=0 \n",
-      "IF age>=27.291530027519897 THEN default=1 \n",
-      "IF age>=26.928214998450102 THEN default=0 \n",
-      "IF age>=26.1922096619383 THEN default=1 \n",
-      "IF income<=29775.1422203146 AND age>=26.159438316244604 THEN default=0 \n",
-      "IF income<=29775.1422203146 AND age>=21.6304703606293 THEN default=1 \n",
-      "IF income>=40496.2558229454 THEN default=0 \n",
-      "IF loan>=4509.88142162832 THEN default=1 \n",
-      "IF income>=29775.1422203146 THEN default=0 \n",
-      "IF loan>=3716.2546852118 THEN default=1 \n",
-      "IF income>=24857.6948815025 THEN default=0 \n",
-      "IF income<=21217.7474563941 THEN default=1 \n",
+      "IF loan>=7708.31562497011 AND loan>=9698.582169129 THEN default=1 \n",
+      "IF income<=31702.3342987522 AND loan>=3665.88089899456 THEN default=1 \n",
+      "IF loan<=5785.88427485782 AND income>=46118.5501003638 THEN default=0 \n",
+      "IF loan<=4849.33378471958 AND age>=34.1016539284028 THEN default=0 \n",
+      "IF income<=60019.447135273396 AND age>=33.6821509548463 THEN default=1 \n",
+      "IF age>=33.403173910453894 THEN default=0 \n",
+      "IF loan<=4849.33378471958 AND age>=32.8975483207032 THEN default=1 \n",
+      "IF income<=60019.447135273396 AND loan>=5061.77783089573 AND age>=29.4230185477063 THEN default=1 \n",
+      "IF loan>=7218.9682240579195 AND loan>=9595.28628892989 THEN default=0 \n",
+      "IF loan>=7218.9682240579195 AND loan>=8034.74777409028 THEN default=1 \n",
+      "IF age>=32.718134177383 THEN default=0 \n",
+      "IF loan>=4849.33378471958 AND age>=29.417216334492 THEN default=0 \n",
+      "IF loan<=4849.33378471958 AND age>=32.516422502230895 THEN default=1 \n",
+      "IF age>=30.676849837880603 THEN default=0 \n",
+      "IF loan<=4849.33378471958 AND age>=30.132575557101497 THEN default=1 \n",
+      "IF loan<=4849.33378471958 AND age>=29.209119285922498 THEN default=0 \n",
+      "IF income<=43439.98872675 AND loan>=5061.77783089573 THEN default=1 \n",
+      "IF age>=29.115531621500804 THEN default=1 \n",
+      "IF age>=28.8766067125835 THEN default=0 \n",
+      "IF income<=22089.8374845274 AND age>=21.3656869572587 THEN default=1 \n",
+      "IF loan>=7084.263509070559 AND age>=22.3484194725752 THEN default=1 \n",
+      "IF income>=57787.565658800304 THEN default=0 \n",
+      "IF age>=28.354908418376002 THEN default=0 \n",
+      "IF age>=27.866907121148 THEN default=1 \n",
+      "IF age>=25.546307830139998 THEN default=0 \n",
+      "IF income>=44471.873731818094 THEN default=1 \n",
+      "IF age>=24.7831077934243 THEN default=1 \n",
+      "IF age>=22.6691616862081 THEN default=0 \n",
+      "IF age>=22.656479598488698 THEN default=1 \n",
+      "IF loan<=4625.19337762744 AND age>=19.084409590344897 THEN default=0 \n",
+      "IF age>=19.0578916789964 THEN default=1 \n",
+      "IF age>=18.713332561776 THEN default=0 \n",
+      "IF income>=32197.6207010448 AND loan>=7363.03763852006 THEN default=1 \n",
+      "IF income>=32197.6207010448 THEN default=0 \n",
+      "IF income<=26218.4948474169 THEN default=1 \n",
       "IF TRUE THEN default=0 \n"
      ]
     }
@@ -692,7 +699,7 @@
     {
      "data": {
       "text/plain": [
-       "<Orange.evaluation.testing.Results at 0x23b4c9108e0>"
+       "<Orange.evaluation.testing.Results at 0x2098913a620>"
       ]
      },
      "execution_count": 38,
@@ -712,7 +719,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.974])"
+       "array([0.968])"
       ]
      },
      "execution_count": 39,
@@ -722,6 +729,215 @@
    ],
    "source": [
     "Orange.evaluation.CA(pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Começando Majority Learner - consiste em classificar novos dados com base na maioria do resultado de classe mais predominante. Dessa forma, um algorítimo deverá ser mais eficaz do que o Majority Learner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_credit = Orange.data.Table('DB/credit_data_regras.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[income, age, loan | default]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_credit.domain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "majority = Orange.classification.MajorityLearner()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = Orange.evaluation.testing.TestOnTestData(base_credit,base_credit,[majority])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.8585])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Orange.evaluation.CA(pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'0': 1717, '1': 283})"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "Counter(str(registro.get_class()) for registro in base_credit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_census = Orange.data.Table('DB/census_regras.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[age, workclass, final-weight, education, education-num, marital-status, occupation, relationship, race, sex, capital-gain, capital-loos, hour-per-week, native-country | income]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_census.domain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "majority = Orange.classification.MajorityLearner()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = Orange.evaluation.testing.TestOnTestData(base_census,base_census,[majority])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.75919044])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Orange.evaluation.CA(pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como já visto a cima, um algoritmo deve ter accuracy maior que 75% (Majority Learner)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'<=50K': 24720, '>50K': 7841})"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter(str(registro.get_class()) for registro in base_census)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7591904425539756"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "24720 / (24720 + 7841)"
    ]
   }
  ],
